Could not fix the problem product variable not showing, but i understand better how angular works hwen it comes to loading variables in HTML.
Added a recently view bar, may change it to mobile only.

--- a/WorkingWithAngular/src/app/cart/cart.component.css
+++ b/WorkingWithAngular/src/app/cart/cart.component.css
@@ -11,15 +11,14 @@
   font-family: "Lato", sans-serif;
   font-size: 1.3rem;
   color: rgba(0,0,0,0.8);
-  text-align: justify;
   padding: 1rem 0.5rem;
+  margin: 2rem 0;
 }
 
 .recommended-container {
   width: 100%;
   display: flex;
   justify-content: space-between;
-  height: 463px;
   gap: 0.5rem;
   align-items: center;
 }
@@ -36,6 +35,29 @@
   border-radius: 10px;
   border: 1px solid rgba(0,0,0,0.2);
   background-color: white;
+}
+
+.recently-section {
+  width: 100%;
+  background-color: #f5f5f5;
+  font-family: "Lato", sans-serif;
+  font-size: 1.3rem;
+  color: rgba(0,0,0,0.8);
+  margin: 2rem 0;
+  padding: 1rem 0;
+}
+
+.slide-container {
+  display: flex;
+  gap: 0.5rem;
+  overflow-x: scroll;
+  padding: 0 0.5rem;
+}
+
+@media screen and (min-width: 840px) {
+  .slide-container {
+    padding: 0 1.7rem;
+  }
 }
 
 
